--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="line">
       <p class="word">
-        coding
+        developer
       </p>
       <p class="word amp">
         &amp;
