Removed references to cyph.codes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>cyph.codes</title>
+  <title>cyph.cloud</title>
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,2&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div class="line">
-      <p class="title">cyph.codes</p>
+      <p class="title">cyph.cloud</p>
     </div>
     <div class="line">
       <p class="word">
@@ -56,7 +56,7 @@
     <div class="line">
       <p class="word">
         <a class="contact"
-          href="mailto:contact@cyph.codes?body=%0D%0A%0D%0AEnquires%20will%20be%20ignored%20without%20the%20tag%20below.%0D%0ASent%20from%20cyph.codes%0D%0AThough%20you%20are%20free%20to%20remove%20this%20line%20and%20others%20below."
+          href="mailto:contact@cyph.cloud?body=%0D%0A%0D%0AEnquires%20will%20be%20ignored%20without%20the%20tag%20below.%0D%0ASent%20from%20cyph.codes%0D%0AThough%20you%20are%20free%20to%20remove%20this%20line%20and%20others%20below."
           target="_blank" rel="noopener noreferrer">
           <span>➤</span> email
         </a>
