Removed references to cyph.codes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="line">
       <p class="word">
-        <a class="github" href="https://github.com/imcyph/cyph.codes" target="_blank" rel="noopener noreferrer">
+        <a class="github" href="https://github.com/imcyph/cyph.cloud" target="_blank" rel="noopener noreferrer">
           <span>g</span>
           <span>i</span>
           <span>t</span>
