--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="line">
       <p class="word">
         <a class="contact"
-          href="mailto:contact@cyph.cloud?body=%0D%0A%0D%0AEnquires%20will%20be%20ignored%20without%20the%20tag%20below.%0D%0ASent%20from%20cyph.codes%0D%0AThough%20you%20are%20free%20to%20remove%20this%20line%20and%20others%20below."
+          href="mailto:contact@cyph.cloud?body=%0D%0A%0D%0AEnquires%20will%20be%20ignored%20without%20the%20tag%20below.%0D%0ASent%20from%20cyph.cloud%0D%0AThough%20you%20are%20free%20to%20remove%20this%20line%20and%20others%20below."
           target="_blank" rel="noopener noreferrer">
           <span>➤</span> email
         </a>
