--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="line">
       <p class="word">
-        developer
+        innovator
       </p>
       <p class="word amp">
         &amp;
@@ -25,7 +25,7 @@
     </div>
     <div class="line">
       <p class="word">
-        musician
+        entertainer
       </p>
     </div>
     <div class="line">
