--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <main>
         <p class="error">404</p>
             <p class="word">
-                <a class="back" href="https://cyph.cloud" target="_blank" rel="noopener noreferrer">
+                <a class="back" href="https://cyph.cloud" rel="noopener noreferrer">
                 <span>h</span>
                 <span>o</span>
                 <span>m</span>
