--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="line">
       <p class="word">
-        innovator
+        for shits
       </p>
       <p class="word amp">
         &amp;
@@ -25,7 +25,7 @@
     </div>
     <div class="line">
       <p class="word">
-        entertainer
+       for giggles
       </p>
     </div>
     <div class="line">
